css change to fix double scrollbars in power select dropdown

--- a/app/styles/denali/ember-power-select.scss
+++ b/app/styles/denali/ember-power-select.scss
@@ -88,6 +88,10 @@
   .ember-power-select-option {
     padding: 8px 16px;
   }
+  .ember-power-select-options {
+    max-height: max-content;
+    overflow-y: hidden;
+  }
 }
 
 .ember-power-select-group-name {
